--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --output-path docs --base-href='https://ankitkumarsharma.github.io/angular-crud/'"
+    "deploy": "ng build --prod --output-path docs --base-href=/angular-crud/"
   },
   "private": true,
   "dependencies": {
